--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -141,7 +141,7 @@ of those sections to manage the look and feel of the site. */
 }
 /**** End of Code for buttons ****/
 
-/**** Animation and fade in left and right ****/
+/**** Animation and fade in left and right Up and down****/
 
 .animate {
     -webkit-animation-duration: 2s;
@@ -211,6 +211,72 @@ of those sections to manage the look and feel of the site. */
 .fadeInRight {
     -webkit-animation-name: fadeInRight;
     animation-name: fadeInRight;
+}
+
+@-webkit-keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(40px);
+        transform: translateY(40px);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+
+@keyframes fadeInUp {
+    0%{
+        opacity:0;
+        -webkit-transform:translateY(40px);
+        -ms-transform:translateY(40px);
+        transform:translateY(40px);
+    }
+    
+    100%{
+        opacity: 1;
+        -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+    }
+}
+
+.fadeInUp {
+    -webkit-animation-name: fadeInUp;
+    animation-name: fadeInUp;
+}
+
+@-webkit-keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(-40px);
+        transform: translateY(-40px);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+
+@keyframes fadeInDown {
+    0%{
+        opacity:0;
+        -webkit-transform:translateY(-40px);
+        -ms-transform:translateY(-40px);
+        transform:translateY(-40px);
+    }
+    
+    100%{
+        opacity: 1;
+        -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+    }
+}
+
+.fadeInDown {
+    -webkit-animation-name: fadeInDown;
+    animation-name: fadeInDown;
 }
 
 /**** End of Animation and fade in left and right ****/
@@ -417,3 +483,29 @@ of those sections to manage the look and feel of the site. */
 }
 
 /**** End of Navigtion ****/
+
+/**** Contact ****/
+
+.fa {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: -webkit-xxx-large;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    transform: translate(0, 0);
+}
+
+.fa-bars{
+    color: #fff;
+}
+
+.adress-element {
+    text-align: center;
+    margin-bottom: 50px;
+}
+.adress-element .fa {
+    color: #b3b3b3;
+}
+
+/**** End of Contact ****/
