--- a/css/equipe.css
+++ b/css/equipe.css
@@ -58,7 +58,7 @@ h6.description{
 }
 .img-box ul i{
 	font-size: 20px;
-	letter-spacing: 10px;
+	/*letter-spacing: 10px;*/
 }
 .img-box ul li{
 	width: 30px;
