add text change first picture waiting good images to continue

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,9 @@ h6.description{
 .img-box:hover div{
 	opacity: 1;
 }
+.rotate90{
+	transform: rotate(270deg);
+}
 .pointeur{
 	cursor: pointer;
 }
